style: :lipstick: fix sizing of the logo, it was a bit too big

--- a/sprout/static/css/style.css
+++ b/sprout/static/css/style.css
@@ -65,4 +65,6 @@ button:not(.transparent),
 
 nav img {
   padding: 10px;
+  max-height: 65px;
+  width: auto;
 }
